Kyverno/require-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-limits-in-pods
  namespace: kyverno
spec:
  # This makes the rule block deployments instead of just auditing them
  validationFailureAction: Enforce
  rules:
  - name: require-container-resources
    match:
      any:
      - resources:
          # This rule applies to all pods -- they must have limits
          kinds:
          - Pod
    validate:
      message: "CPU and memory resource requests and limits are required for all containers."
      # This is the actual rule: the 'team-owner' label must exist
      pattern:
        spec:
          containers:
            - resources:
                requests:
                  cpu: "?*"
                  memory: "?*"
                limits:
                  cpu: "?*"
                  memory: "?*"
